syntax = "proto3";

package voice;

option go_package = "github.com/Korpenter/assistand/internal/controller/grpc/pb";

service ActionHandler {
    rpc DoAction (ActionRequest) returns (ActionResponse);
}

message ActionRequest {
    string session_id = 1;
    string text_input = 2;
}

message ActionResponse {
    string message = 1;
    bool success = 2;
}